# fastapi-beyond-crud-docs

./: README.md  pyproject.toml
docs/: chapter1.md  chapter11.md  chapter2.md  chapter8.md
site/: sitemap.xml
site/chapter1/: index.html
site/chapter10/: index.html
site/chapter11/: index.html
site/chapter12/: index.html
site/chapter13/: index.html
site/chapter14/: index.html
site/chapter15/: index.html
site/chapter16/: index.html
site/chapter2/: index.html
site/chapter3/: index.html
site/chapter4/: index.html
site/chapter5/: index.html
site/chapter6/: index.html
site/chapter7/: index.html
site/chapter8/: index.html
site/chapter9/: index.html
site/search/: search_index.json
